# Fabricius-Templates-Red-DiscordBot

./: LICENSE  forge.py  pyproject.toml
templates/cog/: __init__.py.mustache  core.py.mustache  forge.py  info.json.mustache
