[tool.poetry]
name = "fabricius-template-cog-red-discordbot"
version = "0.0.0"
description = "A template for Red-DiscordBot cogs & repo."
authors = ["Predeactor <predeactor0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fabricius = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
